# icfpc2015

./: .gitignore  README.md  run_test.sh
cpp/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
cpp/CMake/: FindFolly.cmake
cpp/icfpc/: CMakeLists.txt  emulator.cpp  main.cpp  solver.cpp  stub_fun.cpp
cpp/icfpc/common/: board.cpp  board.h  cell.h  rnd_gen.h  unit.cpp  unit.h
cpp/icfpc/emulator/: emulator.cpp  load.cpp  load.h  load_board.cpp  load_board.h  load_units.cpp  load_units.h  show_board.cpp  show_board.h  unit_stream.h
cpp/icfpc/game/: dfs_searcher.cpp  dfs_searcher.h  game.cpp  game.h  stupid.cpp  stupid.h  unit_stream.cpp  unit_stream.h
cpp/test/: .ycm_extra_conf.py  CMakeLists.txt  rng_test.cpp  test_stub.cpp  unit_test.cpp
scripts/: fetch_problems.sh  push_solutions.sh
